# rag-search-engine

./: .gitignore  pyproject.toml
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  llm.py  multimodal_search_cli.py  rerank.py  semantic_search_cli.py  test_gemini.py
cli/lib/: evaluation.py  hybrid_search.py  keyword_search.py  multimodal_search.py  rag.py  search_utils.py  semantic_search.py
cli/lib/prompts/: answer_question.md  answer_question_detailed.md  answer_with_citations.md  batch_rerank.md  expand.md  individual_rerank.md  llm_judge.md  rewrite.md  spelling.md  summarization.md
